Version 4.33 - 31 May 2011, by Per Øyvind Karlsen

- add URPM::Resolve::fullname_parts() as a function parsing fullname with a
  regex assisted by provided disttag & distepoch

Version 4.32 - 31 May 2011, by Per Øyvind Karlsen

- *really* fix URPM::Package->sourcerpm

Version 4.31 - 31 May 2011, by Per Øyvind Karlsen

- fix URPM::Package->sourcerpm returning summary in stead of source rpm
- fix slow matching of individual regexes for skipping dependencies by creating
  a large regex to match them all at once (#61389, patch contributed by
  Shlomi Fish \o/)

Version 4.30 - 12 May 2011, by Per Øyvind Karlsen

- fix Resolve.pm/_choose_required() breakage after DUDF merge, causing ie.
  'urpmq -d' to break (#63250, with big thanks to Funda\o/)

Version 4.29 -  7 May 2011, by Per Øyvind Karlsen

- fix segfault when trying to get EVR of a src.rpm from synthesis, as
  @provides@ are omitted for these

Version 4.28 -  5 May 2011, by Per Øyvind Karlsen

- revert attempt at refactorizing Trans_run() which turned out to give code
  harder to read and introduced bugs of options not being parsed (#63205)
- fix an invalid free() that would've happened if package summary were to be
  missing and the "" string constant were attempted to be freed
- fix odd problems caused by attempt at translating correct tag names for
  query table into rpm tags
- use newSVpvs() for pushing empty strings as constants in stead

Version 4.27 -  4 May 2011, by Per Øyvind Karlsen

- get the correct package filesize from header
- fix proper return of 'src' as arch for src.rpms
- fix confusion between %{sourcerpm} & %{sourcepackage} tags

Version 4.26 -  3 May 2011, by Per Øyvind Karlsen

- fix really odd issue with recognizing src.rpms

Version 4.25 -  3 May 2011, by Per Øyvind Karlsen

- start using gnu99
- fix some invalid free()s

Version 4.24 -  3 May 2011, by Per Øyvind Karlsen

- fix segfault caused by attempting to assign arch of wrong package

Version 4.23 -  3 May 2011, by Per Øyvind Karlsen
